# ffi-timeseries-rs

./: .gitignore  README.md
timeseries-populator-rs/: Cargo.toml
timeseries-populator-rs/src/: main.rs
timeseries-query/: Program.cs  TimeseriesQuery.csproj  TimeseriesQuery.sln
timeseries-rs/: Cargo.toml
timeseries-rs/src/: lib.rs
