[package]
name = "timeseries-populator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
deltalake = { version = "0.16.5", features = ["arrow", "parquet", "datafusion"] }
rand = "0.8.5"
tokio = "1.35.0"
