[package]
name = "timeseries-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "timeseries_rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { features = ["ffi"] }
deltalake = { version = "0.16.5", features = ["arrow", "parquet", "datafusion"] }
tokio = "1.35.0"
